--- a/views/default.html
+++ b/views/default.html
@@ -30,7 +30,7 @@
             <ul class="nav navbar-nav">
                 <!--ignore a~ -->
                 <li><a  <?php if(App::getRouter()->getController() == 'pages')   {?>     class="active"   <?php }?>     href="/pages/">Pages</a></li>
-                <li><a  <?php if(App::getRouter()->getController() == 'contacts'){?>     class="active"   <?php }?>     href="/contacts/">Contact us</a></li>
+                <li><a  <?php if(App::getRouter()->getController() == 'contacts'){?>     class="active"   <?php }?>     href="/contacts/">Оставить сообщение</a></li>
             </ul>
         </div>
 
