--- a/views/default.html
+++ b/views/default.html
@@ -6,18 +6,18 @@
     <link rel="stylesheet" href="/css/style.css"/>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-          <!--integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"-->
-          <!--crossorigin="anonymous">-->
+    <!--integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"-->
+    <!--crossorigin="anonymous">-->
 
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
-          <!--integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"-->
-          <!--crossorigin="anonymous">-->
+    <!--integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp"-->
+    <!--crossorigin="anonymous">-->
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-            <!--integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"-->
-            <!--crossorigin="anonymous"></script>-->
+    <!--integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"-->
+    <!--crossorigin="anonymous"></script>-->
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -29,8 +29,10 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <!--ignore a~ -->
-                <li><a  <?php if(App::getRouter()->getController() == 'pages')   {?>     class="active"   <?php }?>     href="/pages/">Pages</a></li>
-                <li><a  <?php if(App::getRouter()->getController() == 'contacts'){?>     class="active"   <?php }?>     href="/contacts/">Оставить сообщение</a></li>
+                <li><a  <?php if(App::getRouter()->getController() == 'pages') {?> class="active"   <?php }?>
+                    href="/pages/">Pages</a></li>
+                <li><a  <?php if(App::getRouter()->getController() == 'contacts'){?> class="active"   <?php }?>
+                    href="/contacts/">Оставить сообщение</a></li>
             </ul>
         </div>
 
@@ -40,7 +42,14 @@
 <div class="container">
 
     <div class="starter-template">
-         <?=$data['content'] ?>
+        <?php if(Session::hasFlash()){ ?>
+        <div class="alert alert-info" role="alert">
+            <?php Session::flash();?>
+
+        </div>
+        <?php } ?>
+
+        <?=$data['content'] ?>
 
     </div>
 
